--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -13,16 +13,18 @@
 }
 
 .checkoutProduct__info > button{
-    background: #f0c14b;
-    border:1px solid;
+    border: 1px solid ;
+    border-color: #a88734 #9c7e31 #846a29;
     margin-top: 10px;
     color: #111;
-    border-color: #a88734 #9c7e31 #846a29;
     cursor: pointer;
+    border-radius: 3px;
+    background: linear-gradient(to bottom,#f7dfa5,#f0c14b);
+    box-shadow: 0 1px 0 rgb(255 255 255 / 40%) inset;
 }
 
 .checkoutProduct__info > button:hover{
-    background: #cea131;
+    background: linear-gradient(to bottom,#ecd6a7,#f0c14b);
 }
 
 .checkoutProduct > img{
