--- a/src/Product.css
+++ b/src/Product.css
@@ -5,12 +5,13 @@
     background-color: white;
     z-index: 1;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: left;
     margin: 10px;
     padding: 20px;
     width: 100%;
-    max-height: 400px;
+    min-height: 380px;
     min-width: 100px;
+    max-width: 300px;
 }
 
 .product:hover{
@@ -55,3 +56,5 @@
 .product > button:hover{
     background: linear-gradient(to bottom,#ecd6a7,#f0c14b);
 }
+
+/*  */
