--- a/src/Address.css
+++ b/src/Address.css
@@ -1,17 +1,35 @@
 
-body{
+/* body{
     background-color: white;
-}
+} */
+/* *{
+    background-color: white;
+} */
 .address{
     margin-left:200px;
-    margin-right: 200px;
+    margin-right: 150px;
     margin-top: 40px;
     margin-bottom: 30px;
-    background-color: white;
+    /* background-color: white; */
     /* border: 1px solid black; */
 }
 
 .address__components{
     display: flex;
+    flex-wrap: wrap;
+}
+
+.address__loginButton p{
+    margin-top: 30px;
+    border: 1px solid ;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: #111;
+    cursor: pointer;
+    border-radius: 3px;
+    background: linear-gradient(to bottom,#f7dfa5,#f0c14b);
+    box-shadow: 0 1px 0 rgb(255 255 255 / 40%) inset;
+    display: inline-block;
+    padding: 10px;
+    margin-bottom: 31vh;
 }
 
