--- a/src/Header.css
+++ b/src/Header.css
@@ -34,6 +34,8 @@
     border: none;
     width: 100%;
     outline: none;
+    border-radius: 2px;
+    padding-right: 40px;
 }
     
 
@@ -41,6 +43,9 @@
     padding: 5px;
     height: 22px !important;
     background-color: #cd9042;
+    border-radius: 2px;
+    margin-left: -34px;
+    border: none;
 }
 
 .header__nav{
