--- a/src/Address.css
+++ b/src/Address.css
@@ -6,11 +6,15 @@
     background-color: white;
 } */
 .address{
-    margin-left:200px;
+    /* margin-left:200px;
     margin-right: 150px;
     margin-top: 40px;
-    margin-bottom: 30px;
-    /* background-color: white; */
+    margin-bottom: 30px; */
+    padding-left:200px;
+    padding-right: 150px;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background-color: white !important;
     /* border: 1px solid black; */
 }
 
