--- a/src/Header.css
+++ b/src/Header.css
@@ -31,10 +31,10 @@
 .header__searchInput{
     height: 12px;
     padding: 10px;
-    border: none;
+    border:none;
     width: 100%;
     outline: none;
-    border-radius: 2px;
+    border-radius: 4px;
     padding-right: 40px;
 }
     
@@ -42,10 +42,13 @@
 .header__searchIcon{
     padding: 5px;
     height: 22px !important;
-    background-color: #cd9042;
-    border-radius: 2px;
+    background-color: #eeb66c;
+    border-radius: 0px     4px      4px           0;
     margin-left: -34px;
-    border: none;
+    border-right: 0px solid black;
+    cursor: pointer;
+    color: #111;
+    margin-right: 10px;
 }
 
 .header__nav{
@@ -66,11 +69,13 @@
     font-size: 12px;
     line-height: 14px;
     height: 14px;
-    color: #ccc;
+    font-weight: 300;
+    color: rgb(255, 255, 255);
 }
 
 .header__optionLineTwo{
     font-size: 14px;
+    font-weight: 900;
     line-height: 15px;
     font-weight: 700;
     color: white;
@@ -81,6 +86,7 @@
     align-items: center;
     color: white;
     padding-right: 2px;
+    margin-right: 8px;
 }
 
 .header__basketCount{
