--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -16,3 +16,10 @@
     width: 100%;
     margin-bottom: 10px;
 }
+
+.checkout__emptyCart{
+    margin-top: 30px;
+    margin-left: 10px;
+    margin-bottom: 200px;
+    
+}
