Vertical scroll added for products

--- a/src/Product.css
+++ b/src/Product.css
@@ -10,8 +10,9 @@
     padding: 20px;
     width: 100%;
     min-height: 380px;
-    min-width: 100px;
+    min-width: 264px;
     max-width: 300px;
+    /* width:400px; */
 }
 
 .product:hover{
