--- a/src/Home.css
+++ b/src/Home.css
@@ -10,11 +10,20 @@
     z-index: 1;
     margin-left: 5px;
     margin-right: 5px;
-    justify-content: center;
+    align-items: center;
+    /* justify-content: center; */
+    flex: 1;
+    overflow-x: auto;
+
+    width: 97.5vw;
+}
+
+.home__row::-webkit-scrollbar{
+    display: none;
 }
 
 .home__image{
-    width: 100%;
+    width: 99vw;
     z-index: -1;
     margin-bottom: -295px;
     mask-image: linear-gradient(to bottom, rgb(0, 0, 0,1), rgba(0,0,0,0))
