--- a/src/Order.css
+++ b/src/Order.css
@@ -11,6 +11,17 @@
     right: 200px;    
 }
 
+.order__id > span{
+    margin-left: 100px;
+    cursor: pointer;
+    color:  #007185;
+}
+
+.order__id > span:hover{
+    color: #C7511F;
+    text-decoration: underline;
+}
+
 .order__total{
     font-weight: 500;
     text-align: right;
